MDEV-37576 Assertion `!global_table.versioned()' failed after ADD SYS VERSIONING

Assertion `!global_table.versioned()' failed
after ALTER TABLE GTT ADD SYSTEM VERSIONING.

HA_CREATE_INFO::options is only set by lexer. ALTER TABLE et al only has
table_options (though it's set a bit later).

Fix: use HA_CREATE_INFO::table_options